feat: added initial style css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Exemplo Gitpages</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <nav>
+                <a href="#">Item-1</a>|<a href="#">Item-2</a>|<a href="#">Item-3</a>
+            </nav>
+        </header>
+        <section class="conteudo">
+            <div class="box">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Ullam voluptate illo explicabo veritatis sunt aliquid?
+                Nesciunt quo modi, blanditiis distinctio reiciendis aliquam, 
+                eveniet ipsa, possimus quis natus maiores repudiandae assumenda!
+            </div>
+            <div class="box">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Ullam voluptate illo explicabo veritatis sunt aliquid?
+                Nesciunt quo modi, blanditiis distinctio reiciendis aliquam, 
+                eveniet ipsa, possimus quis natus maiores repudiandae assumenda!
+            </div>
+            <div class="box">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Ullam voluptate illo explicabo veritatis sunt aliquid?
+                Nesciunt quo modi, blanditiis distinctio reiciendis aliquam, 
+                eveniet ipsa, possimus quis natus maiores repudiandae assumenda!
+            </div>
+        </section>
+        <footer>
+            <div>
+                <p>
+                    Todos os direitos reservados
+                </p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
