feat: finish html

--- a/index.html
+++ b/index.html
@@ -9,41 +9,42 @@
   </head>
   <body>
     <header>
+      <img src="./assets/images/logo.png" />
       <nav><a href="#">Item-1</a>|<a href="#">Item-2</a>|<a href="#">Item-3</a></nav>
     </header>
     <h2>Seção Foto</h2>
     <section class="conteudo">
       <div>
-        <img src="" alt="" />
+        <img src="./assets/images/lobo1.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./assets/images/lobo2.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./assets/images/lobo3.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./assets/images/lobo4.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./assets/images/lobo5.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./assets/images/lobo6.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
     </section>
     <footer>
       <h2>Fale Conosco</h2>
       <nav>
-        <a href="#">Item-1</a>
-        <a href="#">Item-2</a>
-        <a href=#"">Item-3</a>
+        <a href="#"><img src="./assets/images/social-1.png" alt="logo" /></a>
+        <a href="#"><img src="./assets/images/social-2.png" alt="logo" /></a>
+        <a href=""><img src="./assets/images/social-3.png" alt="logo" /></a>
       </nav>
     </footer>
   </body>
