--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Exemplo Gitpages</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
+
   <body>
-    <header>
-      <img src="./assets/images/logo.png" />
-      <nav><a href="#">Item-1</a>|<a href="#">Item-2</a>|<a href="#">Item-3</a></nav>
+    <header class="cabecalho">
+      <img src="./assets/images/logo.png" alt="Monigtor de computador." />
+      <nav>
+        <a href="#">Item-1</a>
+        <a href="#">Item-2</a>
+        <a href="#">Item-3</a>
+      </nav>
     </header>
-    <h2>Seção Foto</h2>
+
+    <h2 class="tit-sec">Seção Foto</h2>
+
     <section class="conteudo">
       <div>
         <img src="./assets/images/lobo1.jpg" alt="Lobo" />
@@ -39,13 +46,16 @@
         <p>Legenda</p>
       </div>
     </section>
-    <footer>
+
+    <footer class="rodape">
       <h2>Fale Conosco</h2>
       <nav>
-        <a href="#"><img src="./assets/images/social-1.png" alt="logo" /></a>
-        <a href="#"><img src="./assets/images/social-2.png" alt="logo" /></a>
-        <a href=""><img src="./assets/images/social-3.png" alt="logo" /></a>
+        <a href="#"><img src="./assets/images/social-1.png" alt="Logo github" /></a>
+        <a href="#"><img src="./assets/images/social-2.png" alt="Logo facebook" /></a>
+        <a href="#"><img src="./assets/images/social-3.png" alt="Logo twitter" /></a>
       </nav>
     </footer>
   </body>
 </html>
+Footer © 2023 GitHub, Inc. Footer navigation Terms Privacy Security Status Docs Contact GitHub Pricing API Training Blog
+About pf0670/index.html at main · 1TDSPV-2023/pf0670
