--- a/index.html
+++ b/index.html
@@ -1,61 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exemplo Gitpages</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exemplo Gitpages</title>
+    <link rel="stylesheet" href="./css/estilo.css">
+</head>
+
+<body>
+
     <header class="cabecalho">
-      <img src="./assets/images/logo.png" alt="Monigtor de computador." />
-      <nav>
-        <a href="#">Item-1</a>
-        <a href="#">Item-2</a>
-        <a href="#">Item-3</a>
-      </nav>
+        <img src="./img/logo.png" alt="Monigtor de computador.">
+        <nav>
+            <a href="#">Item-1</a>
+            <a href="#">Item-2</a>
+            <a href="#">Item-3</a>
+        </nav>
     </header>
 
     <h2 class="tit-sec">Seção Foto</h2>
-
+ 
     <section class="conteudo">
-      <div>
-        <img src="./assets/images/lobo1.jpg" alt="Lobo" />
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./assets/images/lobo2.jpg" alt="Lobo" />
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./assets/images/lobo3.jpg" alt="Lobo" />
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./assets/images/lobo4.jpg" alt="Lobo" />
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./assets/images/lobo5.jpg" alt="Lobo" />
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./assets/images/lobo6.jpg" alt="Lobo" />
-        <p>Legenda</p>
-      </div>
+        <div>
+            <img src="./img/lobo1.jpg" alt="Lobo">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="./img/lobo2.jpg" alt="Lobo">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="./img/lobo3.jpg" alt="Lobo">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="./img/lobo4.jpg" alt="Lobo">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="./img/lobo5.jpg" alt="Lobo">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="./img/lobo6.jpg" alt="Lobo">
+            <p>Legenda</p>
+        </div>
     </section>
 
     <footer class="rodape">
-      <h2>Fale Conosco</h2>
-      <nav>
-        <a href="#"><img src="./assets/images/social-1.png" alt="Logo github" /></a>
-        <a href="#"><img src="./assets/images/social-2.png" alt="Logo facebook" /></a>
-        <a href="#"><img src="./assets/images/social-3.png" alt="Logo twitter" /></a>
-      </nav>
+        <h2>Fale Conosco</h2>
+        <!-- <nav>
+            <a href="#"><img src="./img/social-1.png" alt="Logo github"></a>
+            <a href="#"><img src="./img/social-2.png" alt="Logo facebook"></a>
+            <a href="#"><img src="./img/social-3.png" alt="Logo twitter"></a>
+        </nav> -->
+
+        <div>
+            <form action="/action-fake.html" method="POST" onsubmit="return true">
+                <fieldset>
+                    <legend>Contato</legend>
+                    <div>
+                        <label for="idNm">Nome</label>
+                        <input type="text" name="txtNm" id="idNm" placeholder="Nome" value="ale">
+                    </div>
+                    <div>
+                        <label for="idEmail">Email</label>
+                        <input type="email" name="txtEmail" id="idEmail" placeholder="Email" value="email@email.com">
+                    </div>
+                    <div>
+                        <input type="submit" value="Enviar">
+                        <input type="reset" value="Limpar">
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+
     </footer>
-  </body>
+
+</body>
+
 </html>
-Footer © 2023 GitHub, Inc. Footer navigation Terms Privacy Security Status Docs Contact GitHub Pricing API Training Blog
-About pf0670/index.html at main · 1TDSPV-2023/pf0670
