--- a/sucesso.html
+++ b/sucesso.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/sucesso.js" defer></script>
+
+    <link rel="stylesheet" href="./css/card.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <title>SUCESSO</title>
 </head>
 <body>
-
     <h1>Login Efetuado com Sucesso!</h1>
-    <div id="bemvindo-user"></div> 
-    <button id="btnSair">Logout</button>  
-    
+    <div id="user-card">
+        <div class="profile-container"></div>
+        <div id="bemvindo-user"></div> 
+        <div id="username"></div>
+    </div> 
 </body>
 </html>
